# app/Http/Responses/StudentResponse.php
@@ -4,7 +4,7 @@ namespace App\Http\Responses;
 
 use Illuminate\Http\Resources\Json\JsonResource;
 
-class UserResponse extends JsonResource
+class StudentResponse extends JsonResource
 {
     /**
      * Transform the resource into an array.
@@ -17,9 +17,11 @@ class UserResponse extends JsonResource
         return [
             'id' => $this->id,
             'name' => $this->name,
-            'email' => $this->email,
-            'situacao' => $this->situacao,
-            'admission_date' => $this->admission_date->format('d/m/Y H:i:s'),
+            'age' => $this->age,
+            'grade_first_semester' => $this->grade_first_semester,
+            'grade_second_semester' => $this->grade_second_semester,
+            'teacher_name' => $this->teacher->name,
+            'number_classroom' => $this->classroom->number,
             'created_at' => $this->created_at->format('d/m/Y H:i:s'),
             'updated_at' => $this->updated_at->format('d/m/Y H:i:s'),
         ];
