# resources/views/layouts/users/menu.blade.php
@@ -1,22 +1,0 @@
-<div class="row">
-    <div class="col">
-        <div class="d-flex justify-content-start">
-            <a class="btn btn-success" aria-current="page" href="/add">Cadastrar usuário</a>
-        </div>
-    </div>
-    <div class="col">
-        <div class="d-flex justify-content-end">
-            <div class="input-group mb-3">
-                <select name="fields" id="fields" class="form-select">
-                    <option value="name">Nome</option>
-                    <option value="email">E-mail</option>
-                    <option value="situacao">Status</option>
-                </select>
-                <input type="search" name="iptSearchFor" id="iptSearchFor" class="form-control" placeholder="Procurar por ..." aria-label="Procurar por ..." aria-describedby="btnsearch">
-                <button class="btn btn-outline-success" type="button" id="btnsearch">
-                    <i class="bi bi-search"></i>
-                </button>
-            </div>
-        </div>
-    </div>
-</div>
