# routes/api.php
@@ -1,6 +1,6 @@
 <?php
 
-use App\Http\Controllers\UserController;
+use App\Http\Controllers\StudentController;
 use Illuminate\Support\Facades\Route;
 
 /*
@@ -14,9 +14,9 @@ use Illuminate\Support\Facades\Route;
 |
 */
 
-Route::get('users', [UserController::class, 'index']);
-Route::get('users/{id}', [UserController::class, 'show']);
-Route::post('users', [UserController::class, 'store']);
-Route::put('users/{id}', [UserController::class, 'update']);
-Route::delete('users/{id}', [UserController::class, 'destroy']);
+Route::get('students', [StudentController::class, 'index']);
+Route::get('student/{id}', [StudentController::class, 'show']);
+Route::post('student', [StudentController::class, 'store']);
+Route::put('student/{id}', [StudentController::class, 'update']);
+Route::delete('student/{id}', [StudentController::class, 'destroy']);
 
