# storage/api-docs/api-docs.json
@@ -1,33 +1,73 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "User manager",
-        "description": "Documentation for user manager",
+        "title": "Student manager",
+        "description": "Documentation for student manager",
         "contact": {},
         "version": "1.0.0"
     },
     "paths": {
-        "/api/users": {
+        "/api/students": {
             "get": {
                 "tags": [
-                    "Users"
+                    "Students"
                 ],
-                "summary": "Get list of users",
-                "description": "Returns a list of users",
-                "operationId": "c457726701591d1183b53aa71fc13441",
+                "summary": "Get list of student",
+                "description": "Returns a list of students",
+                "operationId": "75378cfd9c3d128e0846de3d32b101ec",
                 "responses": {
                     "200": {
                         "description": "Successful response"
                     }
                 }
-            },
-            "post": {
+            }
+        },
+        "/api/student/{id}": {
+            "get": {
                 "tags": [
-                    "Users"
+                    "Students"
                 ],
-                "summary": "Create a new user",
-                "description": "Creates a new user",
-                "operationId": "592819a0265360b2014512d6dbfaf0e7",
+                "summary": "Get student by ID",
+                "description": "Returns a student by ID",
+                "operationId": "610734b1699e2567daa22328cb20e545",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Student ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful response"
+                    },
+                    "404": {
+                        "description": "Student not found"
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "Students"
+                ],
+                "summary": "Update an existing student",
+                "description": "Updates an existing student",
+                "operationId": "2871729e5d84df1c1bc33c536bbf337c",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Student ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -38,17 +78,109 @@
                                         "type": "string",
                                         "example": "John Doe"
                                     },
-                                    "email": {
-                                        "type": "string",
-                                        "example": "john.doe@example.com"
+                                    "age": {
+                                        "type": "integer",
+                                        "example": "30"
                                     },
-                                    "situacao": {
-                                        "type": "string",
-                                        "example": "0"
+                                    "grade_first_semester": {
+                                        "type": "integer",
+                                        "example": "5"
                                     },
-                                    "admission_date": {
+                                    "grade_second_semester": {
+                                        "type": "integer",
+                                        "example": "5"
+                                    },
+                                    "teacher_id": {
+                                        "type": "integer",
+                                        "example": "1"
+                                    },
+                                    "classroom_id": {
+                                        "type": "integer",
+                                        "example": "2"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful response"
+                    },
+                    "422": {
+                        "description": "Invalid data"
+                    },
+                    "404": {
+                        "description": "Student not found"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Students"
+                ],
+                "summary": "Delete a student",
+                "description": "Deletes a student",
+                "operationId": "7e9f6bb7ff59cdd23d337b4ccf7d4448",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Student ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful response"
+                    },
+                    "404": {
+                        "description": "Student not found"
+                    }
+                }
+            }
+        },
+        "/api/student": {
+            "post": {
+                "tags": [
+                    "Students"
+                ],
+                "summary": "Create a new student",
+                "description": "Creates a new student",
+                "operationId": "613d90c63d75c1e33836cf89dbd422e8",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "name": {
                                         "type": "string",
-                                        "example": "2024-07-18T12:20:14"
+                                        "example": "John Doe"
+                                    },
+                                    "age": {
+                                        "type": "integer",
+                                        "example": "30"
+                                    },
+                                    "grade_first_semester": {
+                                        "type": "integer",
+                                        "example": "5"
+                                    },
+                                    "grade_second_semester": {
+                                        "type": "integer",
+                                        "example": "5"
+                                    },
+                                    "teacher_id": {
+                                        "type": "integer",
+                                        "example": "1"
+                                    },
+                                    "classroom_id": {
+                                        "type": "integer",
+                                        "example": "2"
                                     }
                                 },
                                 "type": "object"
@@ -65,126 +197,12 @@
                     }
                 }
             }
-        },
-        "/api/users/{id}": {
-            "get": {
-                "tags": [
-                    "Users"
-                ],
-                "summary": "Get user by ID",
-                "description": "Returns a user by ID",
-                "operationId": "36a33ff774d5cba33c039dec2c3e0287",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "User ID",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successful response"
-                    },
-                    "404": {
-                        "description": "User not found"
-                    }
-                }
-            },
-            "put": {
-                "tags": [
-                    "Users"
-                ],
-                "summary": "Update an existing user",
-                "description": "Updates an existing user",
-                "operationId": "b9091397c8b25f12c6adb74be6ce3a5a",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "User ID",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "properties": {
-                                    "name": {
-                                        "type": "string",
-                                        "example": "John Doe"
-                                    },
-                                    "email": {
-                                        "type": "string",
-                                        "example": "john.doe@example.com"
-                                    },
-                                    "situacao": {
-                                        "type": "string",
-                                        "example": "0"
-                                    },
-                                    "admission_date": {
-                                        "type": "string",
-                                        "example": "2024-07-18T12:20:14"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "Successful response"
-                    },
-                    "422": {
-                        "description": "Invalid data"
-                    },
-                    "404": {
-                        "description": "User not found"
-                    }
-                }
-            },
-            "delete": {
-                "tags": [
-                    "Users"
-                ],
-                "summary": "Delete a user",
-                "description": "Deletes a user",
-                "operationId": "fa56cffde745d3f152f95cbacd936c0b",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "User ID",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successful response"
-                    },
-                    "404": {
-                        "description": "User not found"
-                    }
-                }
-            }
         }
     },
     "tags": [
         {
-            "name": "Users",
-            "description": "Users"
+            "name": "Students",
+            "description": "Students"
         }
     ]
 }
